# marcel-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.ci.yaml  docker-compose.yaml
.github/workflows/: backend.yml  frontend.yml  scraper.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/scripts/: entrypoint.sh  prestart.sh
backend/src/marcel/: __init__.py  app.py  config.py  database.py  init_data.py  main.py  models.py  routes.py
backend/tests/e2e/: conftest.py  test_hybrid_pipeline.py  test_init_data.py  test_routes.py  test_routes_query.py
data/: admins.json  faq.json  knowledgebase.jsonl
deployment/: nginx-docker.conf
docs/: docker.md
frontend/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/nginx/: default.conf
frontend/src/: global.d.ts  main.ts  utils.ts
frontend/src/assets/: main.css
frontend/src/components/: AdminNavigation.vue  BorderedAlert.vue  ChatComponent.vue  ChatMessage.vue  ChatMessageSkeleton.vue  ChatsSidebar.vue  CollapsibleSection.vue  ConsentDialog.vue  ErrorDisplay.vue  HelpModal.vue  MessageInput.vue  NotificationMessage.vue  RatingPrompt.vue  (+2 more)
frontend/tests/: ChatsSidebar.spec.ts  ConsentDialog.spec.ts  LinksRender.spec.ts  MessageButtons.spec.ts  PathNotFound.spec.ts  RatingPrompt.spec.ts  utils.ts
scraper/: README.md  pyproject.toml
scraper/src/scraper/: settings.py
scraper/src/scraper/spiders/: university_spider.py
scraper/tests/: test_university_spider.py
(+49 files in other folders)
